Fix backend/config/